tests/cases/fail/class_optional_field.p4
class Point:
    x: int
    y: int


class Box:
    value: Point | None
